<resources>

    <string name="URL">https://trainfinderapi.azurewebsites.net/api/</string>

    <string name="app_name">TrainFinderDriver</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Main Activity-->
    <string name="main_btn_attach">Attach</string>

    <!--Status Activity-->
    <string name="status_lbl_delay">Delay</string>
    <string name="status_lbl_next">Next Stop</string>
    <string name="status_lbl_speed">Speed</string>
    <string name="status_lbl_speed_require">Speed Require </string>
    <string name="status_lbl_alert">Alert Type</string>
    <string name="status_lbl_alert_distance">Distance</string>
    <string name="status_lbl_alert_msg">Alert Message</string>
    <string name="status_btn_emergency">Emergency Call</string>

</resources>
