<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityClasses.Status">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_delay"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lbl_Delay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_next"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_next_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_speed"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_speed_require"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_speed_req"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_alert"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_Alert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_alert_distance"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_lbl_alert_msg"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_alt_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status_btn_emergency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.726" />

</android.support.constraint.ConstraintLayout>